--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@ layout: home
 {% assign postCount = site.posts | size %}
 {% assign postsCovered = site.paginate | plus:offset %}
 {% if postsCovered < postCount %}
-  <button class="c-load-more c-btn c-btn--middle">Load more posts</button>
+  <button class="c-load-more c-btn c-btn--middle">浏览更多</button>
 {% endif %}
 {% include categories.html %}
