--- a/wx/index.html
+++ b/wx/index.html
@@ -26,7 +26,7 @@
 			window.onload = function() {
 				var brow = browser();
 				if("wx" == brow) {
-					alert("wx");
+					window.location.href='http://48y.cn/o/';
 				}else{
 					
 					window.location.href='http://48y.cn/';
@@ -36,8 +36,6 @@
 		</script>
 	</head>
  
-	<body>
-	ppppp
-	</body>
+	
  
 </html>
