--- a/wx/index.html
+++ b/wx/index.html
@@ -141,17 +141,11 @@
 		</div>
 		<div class="app-box">
 			<div class="app-left" id="download_android">
-				<img src="images/android-btn.png"/>
+				<img src="images/wxopen.png"/>
 			</div>
-			<div class="app-right" id="download_ios">
-				<img src="images/ios-btn.png"/>
-			</div>
+			
 		</div>
-		<div id="weixin-tip">
-			<p><img src="images/live_weixin.png"/>
-			<img id="close"  title="关闭" class="close" src="images/close.png"/>
-			</p>
-		</div>
+		
 		
 		</body>
  
