--- a/wx/index.html
+++ b/wx/index.html
@@ -69,20 +69,12 @@
 	</style>
 	
 	<body>
-		<div class="c-sidebar-author">
-			<div class="bg"><img src="images/wxopen.png" alt=""></div>
-			<div class="c-author__cover">
-			  <a href="{{site.baseurl}}/">
-				<img src="{{site.baseurl}}/images/{% if site.author-image %}{{site.author-image}}{% endif %}" alt="{{site.author-name}}">
-			  </a>
-			</div>
-			<div class="c-author__info">
-			  <div class="c-author__name">{{site.author-name}}</div>
-			  <span class="c-author__job">{{site.author-job}}</span>
-			</div>
+		
+			<div class="bg"><img src="/images/wxopen.png" alt=""></div>
 			
 			
-		</div>
+			
+		
 	</body>
 	
  
