--- a/wx/index.html
+++ b/wx/index.html
@@ -36,43 +36,11 @@
 		</script>
 	</head>
  
-	<style>
-		* {
-			padding: 0;
-			margin: 0;
-		}
-		
-		body {
-			width: 100%;
-			height: 100%;
-			background: #FFFFFF;
-		}
-		
-		.bg {
-			display: none;
-			position: fixed;
-			left: 0;
-			top: 0;
-			right: 0;
-			bottom: 0;
-			z-index: 10;
-			background: rgba(0, 0, 0, 0.9);
-			text-align: end;
-			overflow: hidden;
-			padding: 1rem 5px 0 1rem;
-		}
-		
-		.bg img {
-			width: 93%;
-			height: auto;
-		}
-	</style>
+	
 	
 	<body>
 		
-			<div class="bg"><img src="/images/wxopen.png" alt=""></div>
-			
-			
+		<img src="/images/wxopen.png" alt="">
 			
 		
 	</body>
