--- a/wx/index.html
+++ b/wx/index.html
@@ -40,7 +40,7 @@
 	
 	<body>
 		
-		<img src="/images/wxopen.png" alt="">
+		<img align="right" style="color:darkblue;" src="/images/wxopen.png" alt="">
 			
 		
 	</body>
